Refactoring: fix category buttons + add overflow hidden for body

--- a/templates/sass/blocks/_category.sass
+++ b/templates/sass/blocks/_category.sass
@@ -77,7 +77,7 @@
     background-position: center
     background-size: 14px
     background-color: $white
-    z-index: 101
+    z-index: 99
     &--next
       right: -28px
       background-image: url(../img/arrow-next.svg)
