--- a/templates/sass/blocks/_unreleased.sass
+++ b/templates/sass/blocks/_unreleased.sass
@@ -38,7 +38,7 @@
     background-repeat: no-repeat
     background-position: center
     background-color: transparent
-    z-index: 101
+    z-index: 90
     &--next
       background-image: url(../img/arrow-unreleased.svg)
     &--prev
